--- a/src/output.css
+++ b/src/output.css
@@ -758,9 +758,9 @@ html {
   padding-left: 1rem;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1124px) {
   .container {
-    max-width: 1280px;
+    max-width: 1124px;
   }
 }
 
@@ -1236,16 +1236,8 @@ html {
   margin-inline-end: 1rem;
 }
 
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
 .mr-1 {
   margin-right: 0.25rem;
-}
-
-.mr-8 {
-  margin-right: 2rem;
 }
 
 .ms-2 {
@@ -1266,10 +1258,6 @@ html {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
 }
 
 .block {
@@ -1416,10 +1404,6 @@ html {
   gap: 1.5rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -1432,18 +1416,8 @@ html {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.space-y-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-}
-
 .self-center {
   align-self: center;
-}
-
-.overflow-hidden {
-  overflow: hidden;
 }
 
 .whitespace-nowrap {
@@ -1511,7 +1485,7 @@ html {
 
 .bg-purple-200 {
   --tw-bg-opacity: 1;
-  background: linear-gradient(to bottom right, #662929, #a82121);
+  background-color: rgb(233 213 255 / var(--tw-bg-opacity));
 }
 
 .bg-red-900 {
@@ -1521,7 +1495,7 @@ html {
 
 .bg-slate-500 {
   --tw-bg-opacity: 1;
-  background: linear-gradient(to bottom right, #000000, #656565);
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1558,11 +1532,6 @@ html {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .px-8 {
@@ -1673,10 +1642,6 @@ html {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.uppercase {
-  text-transform: uppercase;
 }
 
 .italic {
@@ -1841,35 +1806,7 @@ html {
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
 }
 
-@media (max-width: 640px) {
-  .sm\:pt-20 {
-    padding-top: 5rem;
-  }
-
-  .sm\:text-base {
-      font-size: 1rem;
-  }
-
-  .sm\:gap-4 {
-    gap: 1rem;
-  }
-
-  .sm\:px-2 {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
-  }
-
-  .sm\:line-height {
-    line-height: inherit;
-  }
-
-}
-
 @media (min-width: 640px) {
-  .sm\:col-span-2 {
-    grid-column: span 2 / span 2;
-  }
-
   .sm\:col-span-1 {
     grid-column: span 1 / span 1;
   }
@@ -1890,6 +1827,10 @@ html {
     flex-direction: row;
   }
 
+  .sm\:gap-4 {
+    gap: 1rem;
+  }
+
   .sm\:space-x-5 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.25rem * var(--tw-space-x-reverse));
@@ -1902,16 +1843,26 @@ html {
     margin-bottom: calc(0px * var(--tw-space-y-reverse));
   }
 
+  .sm\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .sm\:pt-20 {
+    padding-top: 5rem;
+  }
+
   .sm\:text-center {
     text-align: center;
+  }
+
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:right-8 {
-    right: 2rem;
-  }
-
   .md\:order-1 {
     order: 1;
   }
@@ -2091,7 +2042,7 @@ html {
 
 @media (min-width: 1280px) {
   .xl\:w-2\/5 {
-    width: 100%;
+    width: 40%;
   }
 
   .xl\:text-3xl {
